k8s/cloudbeaver/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  selector:
    app: cloudbeaver
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8978
      targetPort: 8978
